--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "mongoose": "^6.11.1",
@@ -17,5 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.28"
   }
 }
