--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "find:unused": "next-unused",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -18,8 +19,5 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.4"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.28"
   }
 }
